--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.pedrow10.demo1">
+    package="ec.edu.epn.alarmas">
 
     <application
         android:allowBackup="true"
@@ -8,13 +8,17 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+        <activity android:name=".MenuOpciones">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".RelojActivity" />
+        <activity android:name=".AlarmasActivity" />
+        <activity android:name=".CronometroActivity" />
+        <activity android:name=".CrearAlarmaActivity"></activity>
     </application>
 
 </manifest>
